Included Helmet for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta
       name="description"
       content="Therapy Center in Aganampudi for children with special needs"
+      data-rh="true"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
